# openbsm

./: .gitignore  .travis.yml  CHANGELOG  CREDITS  HISTORY  INSTALL  LICENSE  Makefile  Makefile.in  NEWS  README  TODO  VERSION  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
bsm/: Makefile  Makefile.in  audit.h  audit_filter.h  audit_internal.h  audit_kernel.h  audit_kevents.h  audit_record.h  audit_uevents.h  auditd_lib.h  libbsm.h
compat/: clock_gettime.h  closefrom.h  compat.h  endian.h  queue.h  uuid.h  uuid_stream.h  uuid_to_string.h
config/: config.h.in
etc/: audit_class  audit_control  audit_event  audit_user  audit_warn
libauditd/: Makefile.in  auditd_lib.c  libauditd.3
libbsm/: Makefile  Makefile.am  Makefile.in  au_class.3  au_control.3  au_domain.3  au_errno.3  au_event.3  au_fcntl_cmd.3  au_free_token.3  au_io.3  au_mask.3  au_open.3  au_socket_type.3  au_token.3  au_user.3  audit_submit.3  bsm_audit.c  bsm_class.c  bsm_control.c  bsm_domain.c  bsm_errno.c  bsm_event.c  bsm_fcntl.c  bsm_flags.c  bsm_io.c  bsm_mask.c  bsm_notify.c  bsm_socket_type.c  bsm_token.c  bsm_user.c  bsm_wrappers.c  libbsm.3  libbsm.h  libbsm_internal.h
man/: Makefile  Makefile.am  Makefile.in  audit.2  audit.log.5  audit_class.5  audit_control.5  audit_control5  audit_event.5  audit_user.5  audit_warn.5  auditctl.2  auditon.2  event_code.5  getaudit.2  getauid.2  setaudit.2  setauid.2
modules/: Makefile.in
modules/auditfilter_noop/: Makefile.am  Makefile.in  auditfilter_noop.c
sys/: Makefile.in
sys/bsm/: Makefile.in  audit.h  audit_domain.h  audit_errno.h  audit_fcntl.h  (+4 more)
test/: Makefile.in
tools/: Makefile  Makefile.am  Makefile.in  audump.c
(+30 files in other folders)
